# analysis-of-petri-nets

./: CMakeLists.txt  Doxyfile  main.cpp  tranclator_classes.qmodel
include/: analyse.hpp  automation.hpp  state.hpp
simple-des-model/: .gitignore  readme.txt
simple-des-model/include/: components.hpp  event.hpp  graph_translators.hpp
simple-des-model/src/: automation.cpp
simple-des-model/test/: state_tests.cpp
src/: analyse.cpp  components.cpp  graph_translators.cpp
test/: automation_tests.cpp  components_tests.cpp  event_tests.cpp
